# SapphireDB

./: README.md  build.sh  build_boost.sh
PlantUML/: ossSocket.wsd
basecode/socket/: client  client.cpp  server  server.cpp
basecode/socket_demo/clientdemo/: client  clientdemo.cpp  makefile
basecode/socket_demo/serverdemo/: makefile  server  serverdemo.cpp
basecode/设计模式/: simpleFactory  simpleFactory.cpp  simple_factory  simple_factory.cpp
basecode/设计模式/simpleFactory.dSYM/Contents/Resources/DWARF/: simpleFactory
src/: Makefile  Makefile.am  Makefile.in  build.sh  config.h  config.h.in~  config.status  configure  configure.ac  configure.scan.bak
src/.deps/: sapphiredb-base64.Po  sapphiredb-bsonobj.Po  sapphiredb-json.Po  sapphiredb-md5.Po  sapphiredb-nonce.Po  sapphiredb-oid.Po  sapphiredb-ossSocket.Po  sapphiredb-pmdMain.Po  sapphiredb-pmdTcpListener.Po  sdb-base64.Po  sdb-bsonobj.Po  sdb-command.Po  sdb-commandFactory.Po  sdb-edb.Po  sdb-json.Po  sdb-md5.Po  sdb-nonce.Po  sdb-oid.Po  sdb-ossSocket.Po
src/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/bson/src/lib/: base64.h  nonce.cpp
src/client/: command.cpp  command.hpp  commandFactory.cpp  commandFactory.hpp  edb.cpp  edb.hpp
src/include/: core.hpp  ossLatch.hpp  ossPrimitiveFileOp.hpp  ossQueue.hpp  ossSocket.hpp  pd.hpp  pmdOptions.hpp
src/oss/: ossSocket.cpp
src/pmd/: pmd.cpp  pmdMain.cpp  pmdOptions.cpp  pmdTcpListener.cpp
